name:                nbody
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nbody
  main-is: nbody.hs
  build-depends:
      base >= 4.7 && < 5
    , vector >= 0.10
  default-language: Haskell2010
  ghc-options: -Wall
