name:                nbody
version:             0.1.0.0
synopsis:            nbody examples from benchmarksgame.alioth.debian.org
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2015 Thomas Tuegel
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nbody
  main-is: nbody.hs
  other-modules:
    Planet
  build-depends:
      base >= 4.7 && < 5
    , containers >= 0.5
    , inline-c >= 0.5
    , template-haskell >= 2.10
    , vector >= 0.10
  default-language: Haskell2010
  ghc-options: -Wall
  c-sources: nbody.c
  include-dirs: include
  cc-options: -pipe -Wall -O3 -fomit-frame-pointer -march=native -mfpmath=sse -msse3
